kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/pong/src/std/string.k
use super.*;
use super.num.*;

pub type String {
    utf8(bytes: List(U8)): String,
}
