kanc/src/tests/sample_code/should_fail/single_file/type_check/illegal_callee/nullary_type.k
type U {
    u: U,
}

let foo = U(U.u);
